  * add explicit “Depends: sysv-rc” so that initscript’s “Depends: sysv-rc |
    file-rc” will not be satisfied with file-rc. We need the invoke-rc.d and
    update-rc.d from sysv-rc, file-rc’s doesn’t have support for systemd.
    (Closes: #739679)
  * set capabilities cap_dac_override,cap_sys_ptrace=ep for
    systemd-detect-virt, so that it works for unprivileged users.
    (Closes: #739699)

  [ Michael Biebl ]
  * do a one-time migration of RAMTMP= from /etc/default/rcS and
    /etc/default/tmpfs, i.e. enable tmp.mount (Closes: #738687)

 -- Michael Stapelberg <stapelberg@debian.org>  Thu, 13 Feb 2014 22:52:45 +0100

systemd (204-7) unstable; urgency=low

  * fix systemctl enable/disable/… error message “Failed to issue method call:
    No such file or directory” (Closes: #734809)
  * bug-script: attach instead of paste extra info with reportbug ≥ 6.5.0
    (Closes: #722530)
  * add stage1 bootstrap support to avoid Build-Depends cycles (Thanks Daniel
    Schepler)
  * cherry-pick:
    order remote mounts from mountinfo before remote-fs.target (77009452cfd)
    (Closes: #719945)
    Fix CPUShares configuration option (ccd90a976dba) (Closes: #737156)
    fix reference in systemd-inhibit(1) (07b4b9b) (Closes: #738316)

 -- Michael Stapelberg <stapelberg@debian.org>  Tue, 11 Feb 2014 23:34:42 +0100

systemd (204-6) unstable; urgency=low

  [ Michael Stapelberg ]
  * Run update-rc.d defaults before update-rc.d <enable|disable>
    (Closes: #722523)
  * preinst: preserve var-{lock,run}.mount when upgrading from 44 to 204
    (Closes: #723936)
  * fstab-generator: don’t rely on /usr being mounted in the initrd
    (Closes: #724797)
  * systemctl: mangle names when avoiding dbus (Closes: #723855)
  * allow group adm read access on /var/log/journal (Closes: #717386)
  * add systemd-journal group (Thanks Guido Günther) (Closes: #724668)
  * copy /etc/localtime instead of symlinking (Closes: #726256)